[package]
name = "logparser"
version = "0.1.0"
authors = ["Mariusz Białończyk <manio@skyboo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.1"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
futures = "0.3"
tokio = { version = "1.18.2", features = ["full"] }
chrono = { version = "0.4.11", features = ["serde"] }
tokio-modbus = { version = "0.5.2", default-features = false, features = ["tcp"] }
influxdb2 = {git = "https://github.com/fjloma/influxdb2", version = "0.1.0" }
lazy_static = "1.4.0"
is_sorted = "0.1.1"
serde = { version = "1.0.*", default-features = false }
postcard = { version = "0.7.3", features = ["alloc"] }
clap = { version = "3.1.18", features = ["derive"] }
sun2000 = {path = "../sun2000"}

