[package]
name = "logparser"
version = "0.1.0"
authors = ["Mariusz Białończyk <manio@skyboo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.1"
simplelog = { version = "0.11.2", features = ["paris", "ansi_term"] }
chrono = { version = "0.4.11", features = ["serde"] }
postcard = { version = "0.7.3", features = ["alloc"] }
clap = { version = "3.1.18", features = ["derive"] }
sun2000 = {path = "../sun2000"}

